[ADD] Agrego trabajos recientes y comento algunas partes que no utilizo

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
+          <li><a href="#testimonials" class="nav-link scrollto"><i class='bx bx-code-alt'></i></i> <span>Projects</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -104,7 +104,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 April 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Buenos Aires, Argentina</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Floresta. Buenos Aires, Argentina</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>LikedIn:</strong><span>click<a href="https://www.linkedin.com/in/kevin-sangregorio-baba431b6/"> aquí</a></span></li>   
                   <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong><span><a href="https://www.linkedin.com/in/kevin-sangregorio-baba431b6/"> KevinSangregorio</a></span></li>   
                 </ul>
@@ -244,6 +244,13 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">English - FCE: B2 <i class="val"></i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -369,7 +376,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -483,10 +490,10 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -528,14 +535,14 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
+          <h2>Projects</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -545,52 +552,52 @@
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  Responsive web single page made with HTML & SASS. <br />
+                  Prototype: <a href="https://www.figma.com/file/F78sg8s6gIMWDs2PT3kpTf/%3A)?node-id=0%3A1" target="_blank">here</a> <br />
+                  Repository: <a href="https://github.com/KevinSangregorio/Pagina-moda-Sorren" target="_blank">here</a>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <img src="assets/img/testimonials/sorren.png" class="testimonial-img" alt="">
+                <h3>Click the next <a href="https://kevinsangregorio.github.io/Pagina-moda-Sorren/" target="_blank">link</a> and explore it</h3>
+                <h4><i class='bx bxl-html5' ></i><i class='bx bxl-sass' ></i></h4>
               </div>
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  Responsive web single page made with HTML & CSS. <br />
+                  Prototype: <a href="https://www.figma.com/file/O5QSp1TS75AD4keXop7Ndf/Simulacro-Examen?node-id=0%3A1" target="_blank">here</a> <br />
+                  Repository: <a href="https://github.com/KevinSangregorio/FrontEnd-1_classwork/tree/main/game_shop" target="_blank">here</a>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <img src="assets/img/testimonials/gameShop.png" class="testimonial-img" alt="">
+                <h3>Click the next <a href="https://kevinsangregorio.github.io/FrontEnd-1_classwork/game_shop/" target="_blank">link</a> and explore it</h3>
+                <h4><i class='bx bxl-html5' ></i><i class='bx bxl-css3' ></i></h4>
               </div>
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  Responsive web pages made with HTML & CSS. <br />
+                  Prototype: <a href="https://www.figma.com/proto/7qh4iPVe98d7DfchQbu5PF/Ecommerce?node-id=2%3A811&starting-point-node-id=1%3A162" target="_blank">here</a> <br />
+                  Repository: <a href="https://github.com/KevinSangregorio/FrontEnd-1_classwork/tree/main/heroes_card" target="_blank">here</a>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <img src="assets/img/testimonials/heroesCard.png" class="testimonial-img" alt="">
+                <h3>Click the next <a href="https://kevinsangregorio.github.io/FrontEnd-1_classwork/heroes_card/" target="_blank">link</a> and explore it</h3>
+                <h4><i class='bx bxl-html5'></i><i class='bx bxl-css3'></i></h4>
               </div>
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  Responsive web single page made with HTML & CSS. <br />
+                  Prototype: <a href="https://www.figma.com/file/3t1qDdvVSm1yTDRRioRGYG/InstaFront" target="_blank">here</a> <br />
+                  Repository: <a href="https://github.com/KevinSangregorio/FrontEnd-1_classwork/tree/main/instafront" target="_blank">here</a>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <img src="assets/img/testimonials/instafront.png" class="testimonial-img" alt="">
+                <h3>Click the next <a href="https://kevinsangregorio.github.io/FrontEnd-1_classwork/instafront/" target="_blank">link</a> and explore it</h3>
+                <h4><i class='bx bxl-html5'></i><i class='bx bxl-css3'></i></h4>
               </div>
             </div><!-- End testimonial item -->
 
