--- a/index.html
+++ b/index.html
@@ -604,13 +604,13 @@
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  Web pages made with HTML, CSS & JavaScript. <br />
+                  API: <a href="https://ctd-todo-api.herokuapp.com/" target="_blank">here</a> <br />
+                  Repository: <a href="https://github.com/KevinSangregorio/ToDo-s" target="_blank">here</a>
                 </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <img src="assets/img/testimonials/toDos.png" class="testimonial-img" alt="">
+                <h3>Click the next <a href="https://kevinsangregorio.github.io/ToDo-s/" target="_blank">link</a> and explore it</h3>
+                <h4><i class='bx bxl-html5'></i><i class='bx bxl-css3'></i><i class='bx bxl-javascript'></i></h4>
               </div>
             </div><!-- End testimonial item -->
 
