[ADD] Agrego portfolio de diseño y quito seccion de contacto

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Kevin Sangregorio</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.instagram.com/kevinsangregorio/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/kevin-sangregorio-baba431b6/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/KevinSangregorio" target="_blank" class="google-plus"><i class='bx bxl-github' ></i></a>
+          <a href="https://www.canva.com/design/DAEYYse0pf4/CqVMYe44PELM8FDYSfF8MA/view?#1" target="_blank" class="instagram"><i class='bx bxs-palette'></i></a>
         </div>
       </div>
 
@@ -63,10 +63,11 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto"><i class='bx bx-medal'></i> <span>Skills</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li> -->
           <li><a href="#testimonials" class="nav-link scrollto"><i class='bx bx-code-alt'></i></i> <span>Projects</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -105,7 +106,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 April 2000</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Floresta. Buenos Aires, Argentina</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>LikedIn:</strong><span>click<a href="https://www.linkedin.com/in/kevin-sangregorio-baba431b6/"> aquí</a></span></li>   
+                  <li><i class="bi bi-chevron-right"></i> <strong>LikedIn:</strong><span><a href="https://www.linkedin.com/in/kevin-sangregorio-baba431b6/">click here</a></span></li>   
                   <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong><span><a href="https://www.linkedin.com/in/kevin-sangregorio-baba431b6/"> KevinSangregorio</a></span></li>   
                 </ul>
               </div>
@@ -622,7 +623,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <!-- <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -689,7 +690,7 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>End Contact Section -->
 
   </main><!-- End #main -->
 
