[ADD] Agrego carpeta de iconos y agrego logos originales a la seccion de skills

--- a/index.html
+++ b/index.html
@@ -204,52 +204,34 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="12"></div>
-              </div>
+              <i style="color: #F25320" class='bx bxl-html5' ></i><span class="skill">HTML </span>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS & SASS<i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <i style="color: #2071F2" class='bx bxl-css3' ></i><span class="skill">CSS</span>
+            </div>
+            <div class="progress">
+              <i style="color: #CA689B"  class='bx bxl-sass' ></i><span class="skill">SASS</span>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <i style="color: #EFD81E" class='bx bxl-javascript' ></i><span class="skill">JavaScript </span>
             </div>
 
             <div class="progress">
-              <span class="skill">Java<i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <img src="./assets/img/skill-icons/java.png" alt="Logo de Java"><span class="skill">Java</span>
             </div>
           
             <div class="progress">
-              <span class="skill">MySQL <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <img src="./assets/img/skill-icons/mysql.png" alt="Logo de MySQL"><span class="skill">MySQL </span>
             </div>
 
             <div class="progress">
-              <span class="skill">Postman <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <img src="./assets/img/skill-icons/postman.png" alt="Logo de Postman"><span class="skill">Postman </span>
             </div>
 
             <div class="progress">
-              <span class="skill">English - FCE: B2 <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <img src="./assets/img/skill-icons/fce.png" alt="Vector de First Certificated Exam"><span class="skill">English - FCE: B2 </span>
             </div>
 
           </div>
@@ -257,45 +239,27 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">REACT <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <i style="color:#14CDF2" class='bx bxl-react' ></i><span class="skill">REACT</span>
             </div>
 
             <div class="progress">
-              <span class="skill">GITHUB <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <i style="color:black" class='bx bxl-github' ></i><span class="skill">GITHUB </span>
             </div>
 
             <div class="progress">
-              <span class="skill">FIGMA <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <img src="./assets/img/skill-icons/figma.png" style="width: 1.6rem; margin: 0 .8rem 0 .5rem;" alt="Logo de Figma"><span class="skill">FIGMA </span>
             </div>
 
             <div class="progress">
-              <span class="skill">ADOBE XD <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <img src="./assets/img/skill-icons/xd.png" alt="Logo de Adobe XD"><span class="skill">ADOBE XD </span>
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <img src="./assets/img/skill-icons/ps.png" alt="Logo de Photoshop"><span class="skill">Photoshop </span>
             </div>
 
             <div class="progress">
-              <span class="skill">Selenium <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+              <img src="./assets/img/skill-icons/selenium.png" alt="Logo de Selenium"><span class="skill">Selenium </span>
             </div>
 
           </div>
@@ -311,7 +275,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          
         </div>
 
         <div class="row">
