--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>Those are some of my latest projects.</p>
+          <p>These are some of my latest projects.</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
